--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,9 @@ serde_json = "1"
 tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
 
 # Rig OpenAI client (front-end → Rust command)
-rig-core = "0.12.0"
+rig-core = "0.13.0"
 tauri-plugin-shell = "2"
+reqwest = "0.12.19"
+futures-util = "0.3.31"
 
 
