--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,16 +20,11 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # Side-car launcher helpers
 tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
 
 # Rig OpenAI client (front-end → Rust command)
-rig-core = "0.13.0"
 tauri-plugin-shell = "2"
-reqwest = "0.12.19"
-futures-util = "0.3.31"
-
-
+tauri-plugin-http = { version = "2", features = ["json", "stream"] }
